Implemented playRound() function that takes the player and computer's choices and compares them to determine the result of one round of the game

--- a/rps.html
+++ b/rps.html
@@ -27,8 +27,28 @@
       }
 
       return compChoice;
-
     }
+
+    function playRound(playerSelection, computerSelection){
+      
+      let result = "";
+
+      if ((playerSelection == "rock" && computerSelection == "scissors") || 
+          (playerSelection == "scissors" && computerSelection == "paper") ||
+            (playerSelection == "paper" && computerSelection == "rock")) {
+              result = "You Win!!";
+          }
+      else if (playerSelection == computerSelection) {
+        result = "Draw!"
+      }
+      else{
+        result = "You Lose."
+      }
+
+      return result;      
+    }
+
+
   </script>
 </body>
 </html>
