Project complete. Added some more function comments. Should add a GUI in the future. As is the game is easily subject to errors if the input is not exactly right but since the future of this project would be a GUI with limited input instead of a text based prompt there is no point increating a detailed exception handling procedure. I can now create functions in JS and I am comfortable using JS directly in an HTML doc.

--- a/rps.html
+++ b/rps.html
@@ -29,6 +29,7 @@
       return compChoice;
     }
 
+    /*Plays one round of RPS prints round results to console and returns an integer for win, draw, or loss.*/
     function playRound(playerSelection, computerSelection){
       
       let result = "";
@@ -53,6 +54,7 @@
       return result;      
     }
 
+    /*(UNUSED) Checks that the user inputted at correct value for RPS*/
     function choiceCheck(playerChoice) {
       if ((playerChoice != "rock") || (playerChoice != "paper") || (playerChoice != "scissors")){
         return true;
@@ -62,6 +64,7 @@
       }
     }
 
+    /*Determines the final result of the five round game*/
     function finalResult(result){
 
       let outcome = "";
@@ -79,6 +82,7 @@
       return outcome;
     }
 
+    /*Plays a five round game of rock, paper, scissors*/
     function game(){
 
       let result = 0;
